<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <RelativeLayout
        android:id="@+id/BodyNoFooter"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/HeaderBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MyCommunityText"
                android:text="My Profile"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#303032"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/EditProfile"
                android:background="@drawable/editlogo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ProfileDesc"
            android:layout_below="@id/HeaderBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ProfilePic"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profilepicture"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/Username"
                android:layout_below="@id/ProfilePic"
                android:text="Olivia Daniel"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textColor="#303032"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/Bio"
                android:layout_below="@id/Username"
                android:text="two bananas for a pound, three bananas for a euro"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="#303032"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_below="@id/Bio"
                android:id="@+id/Info"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/PostCount"
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/PostNum"
                        android:text="7"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="#303032"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_below="@id/PostNum"
                        android:text="posts"
                        android:textStyle="bold"
                        android:textColor="#303032"
                        android:layout_marginTop="-5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/FollowersCount"
                    android:layout_toRightOf="@id/PostCount"
                    android:layout_marginLeft="55dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/Follower"
                        android:layout_width="37dp"
                        android:layout_height="27dp"
                        android:background="@null"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="410"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:layout_below="@id/Follower"
                        android:text="followers"
                        android:textStyle="bold"
                        android:textColor="#303032"
                        android:layout_marginTop="-5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/FollowingCount"
                    android:layout_toRightOf="@id/FollowersCount"
                    android:layout_marginLeft="45dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/Following"
                        android:layout_width="37dp"
                        android:layout_height="27dp"
                        android:background="@null"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="387"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:layout_below="@id/Following"
                        android:text="following"
                        android:textStyle="bold"
                        android:textColor="#303032"
                        android:layout_marginTop="-5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </RelativeLayout>

            <ScrollView
                android:id="@+id/PostScroll"
                android:layout_below="@+id/Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="70dp"
                android:fillViewport="true">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/PostPic1"
                        android:src="@drawable/postpic1"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic2"
                        android:src="@drawable/postpic2"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic3"
                        android:src="@drawable/postpic3"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic4"
                        android:src="@drawable/postpic4"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic5"
                        android:src="@drawable/postpic5"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic6"
                        android:src="@drawable/postpic6"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                    <ImageView
                        android:id="@+id/PostPic7"
                        android:layout_marginTop="-17dp"
                        android:src="@drawable/postpic7"
                        android:layout_width="113dp"
                        android:layout_height="113dp"
                        android:layout_columnSpan="1"/>

                </GridLayout>

            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp">

        <Button
            android:id="@+id/Home"
            android:background="@drawable/housesymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Search"
            android:background="@drawable/searchsymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/Home"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/NewPost"
            android:src="@drawable/plus_sign"
            android:background="@drawable/green_circle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/Search"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/myBtn"
            android:background="@drawable/profilesymbolgreen"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/NewPost"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Contact"
            android:background="@drawable/contactslogogrey"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/myBtn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

</RelativeLayout>