...
                android:textAllCaps="false"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/Body"
            android:layout_above="@+id/Options"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Gallery"
                android:background="@drawable/gallerypicturen"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <ImageView
...
