...

        <Button
            android:id="@+id/myBtn"
            android:layout_below="@id/ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:elevation="16dp"
            android:background="@drawable/rectangle_button_green"/>

...
