...
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/myBtn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/Profile"
            android:background="@drawable/profilelogogrey"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/NewPost"
            android:layout_marginLeft="20dp"
...
